syntax = "proto3";

option java_package = "org.example";
option java_outer_classname = "HelloWorldProto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}